--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -12,7 +12,7 @@
   align-items: center;
 }
 .footer-links a {
-  color: black;
+  color: #6dd06e;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
@@ -22,5 +22,6 @@
   opacity: 1;
 }
 .footer .fa-heart {
-  color: #D23333;
+  color: #6dd06e;
+  opacity: 0.5;
 }
