--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,11 +1,11 @@
 .footer {
-  background: black;
+  /* background: black; */
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 60px;
   padding: 0px 50px;
-  color: #F1F1F1;
+  color: #f1f1f18a;
 }
 .footer-links {
   display: flex;
