--- a/src/style/Filtre.css
+++ b/src/style/Filtre.css
@@ -41,14 +41,19 @@
 
 .flip-card-back {
   background: black;
-  color: #F1F1F1;
+  background-image: linear-gradient(45deg, #0f2e4c,#6dd06e);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
   transform: rotateY(180deg);
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 4px solid #F1F1F1;
+  border: 4px solid #6dd06f4b;
+  font-family: 'bespoke_stencilextrabold', 'Ubuntu', 'Poppins', Courier;
 }
 
 .flip-card-back h1 {
-  font-size: 25px;
+  font-size: 22px;
 }
