fetch effectif equipes

--- a/src/style/contenu.css
+++ b/src/style/contenu.css
@@ -69,6 +69,8 @@
   border: 2px solid #F1F1F1;
   border-radius: 3px;
   transition: all 300ms linear;
+  text-align: center;
+  text-decoration: none;
 }
 
 .BtnContenu:hover {
@@ -76,4 +78,5 @@
   border: 3px solid #43885E ; */
   /* background: #43885E; */
   background-image: linear-gradient(45deg, #0f2e4c,#6dd06e);
+  color: #F1F1F1;
 }
