--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -1,3 +1,50 @@
-.dropdown-menu {
-  background: red;
+
+.titreNav {
+  color: #F1F1F1;
+  font-family: 'Ubuntu', 'Poppins', Courier;
+  font-weight: bold;
+  font-size: 16px;
+  padding: 0 3px;
+  text-decoration: none;
+  cursor: pointer;
+  position: relative;
+  transition: all 200ms linear;
+}
+
+.titreNav:hover {
+  color: #6dd06e;
+  border-left: 3px solid white;
+}
+
+.dropdownMenu {
+  position: absolute;
+  background: #F1F1F1;
+  left: -14;
+  top: -24;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0;
+  height: 160px;
+  width: 140px;
+  z-index: 5;
+  border-radius: 2px;
+}
+
+.dropdownListe {
+  padding: 4px;
+  font-family: 'Ubuntu', 'Poppins', Courier;
+  font-weight: bold;
+
+}
+
+.dropdownListe a {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+
+.dropdownListe:hover {
+  background: #6dd06e;
 }
