--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -32,6 +32,20 @@
   border-radius: 2px;
 }
 
+.dropdownMenu .active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  transition: all 300ms ease;
+}
+
+.dropdownMenu .inactive {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-20px);
+  transition: all 300ms ease;
+}
+
 .dropdownListe {
   padding: 4px;
   font-family: 'Ubuntu', 'Poppins', Courier;
