--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -18,7 +18,7 @@
 
 .dropdownMenu {
   position: absolute;
-  background: #F1F1F1;
+  background: #f1f1f17a;
   left: -14;
   top: -24;
   list-style-type: none;
@@ -53,10 +53,14 @@
 
 }
 
-.dropdownListe a {
+.dropdownMenu a {
   text-decoration: none;
   color: black;
   cursor: pointer;
+}
+
+.dropdownMenu a:hover {
+  color: #F1F1F1;
 }
 
 .dropdownListe:hover {
