--- a/src/style/Equipe.css
+++ b/src/style/Equipe.css
@@ -1,9 +1,11 @@
 .TeamContenu {
   border: 2px solid white;
-  padding: 25px;
+  /* padding: 25px; */
   margin: 30px;
   border-radius: 10px;
-  width: 45%;
+  width: 25%;
+  display: flex;
+  justify-content: center;
 }
 
 .TeamLink {
@@ -11,6 +13,8 @@
   text-decoration: none;
   color: #f1f1f1;
   transition: all 300ms linear;
+  width: 100%;
+  height: 100%;
 }
 
 .TeamLink:hover {
@@ -23,6 +27,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column;
 }
 
 .TeamInfo {
