--- a/src/style/ligue.css
+++ b/src/style/ligue.css
@@ -13,3 +13,20 @@
 .pays > img {
   width: 25px;
 }
+
+.borderImg {
+  background-color: #F1F1F1;
+  backdrop-filter: blur(20px);
+  width: 200px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* position: absolute; */
+  border-radius: 50%;
+  /* RIGHT: 50%; */
+  /* right: 35%; */
+  /* top: -65px;
+  left: 50%; */
+
+}
