--- a/src/style/Equipe.css
+++ b/src/style/Equipe.css
@@ -2,7 +2,7 @@
   /* padding: 25px; */
   margin: 30px;
   width: 25%;
-  height: 350px;
+  height: 400px;
   display: flex;
   justify-content: center;
   position: relative;
@@ -44,13 +44,10 @@
     top: -25px;
     z-index: 2;
 }
-/*
-.TeamHead {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-} */
+
+.Link {
+  margin: 10px 10px;
+}
 
 .TeamInfo {
   position: absolute;
