--- a/src/style/Effectif.css
+++ b/src/style/Effectif.css
@@ -12,6 +12,7 @@
   position: sticky;
   top: 0px;
   font-family: 'Ubuntu', 'Poppins', Courier;
+  z-index: 1000;
 
 }
 
@@ -33,8 +34,9 @@
   flex-flow: wrap;
   align-items: center;
   justify-content: center;
-}
 
+}
+/*
 .joueurImg {
   border-radius: 50%;
 }
@@ -47,18 +49,16 @@
   justify-content: center;
   margin: 25px;
   border: 4px solid #6dd06f4b;
-
-  /* background-image: linear-gradient(45deg, #0f2e4c,#6dd06e); */
   border-radius: 50px 0 50px;
   width: 20%;
   padding: 15px 0;
-}
+} */
 
-.joueur:hover {
+/* .joueur:hover {
   /* background-color: #F1F1F1; */
-}
+/* } */
 
-.infoJoueur {
+/* .infoJoueur {
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -84,4 +84,71 @@
 
 .lastname {
   text-transform: uppercase;
+} */
+
+
+/* ------------------------------ */
+
+.card {
+  position: relative;
+  z-index: 1;
+  display: grid;
+  place-content: center;
+  width: 250px;
+  height: 250px;
+  color: #a18a96;
+  text-align: center;
+  border: 1px solid #fff;
+  background-position: center;
+  background-repeat: no-repeat;
+  /* background: center no-repeat; */
+  background-size: cover;
+  padding: 10px;
+  border-radius: 50px 0 50px 0;
+  overflow: hidden;
+  margin: 15px;
+}
+
+.card::before,
+.card::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: calc(60% + 35px);
+  background-color: #fff;
+  transition: transform 0.5s 0.25s;
+}
+
+.card::before {
+  top: 0;
+  clip-path: polygon(0 0, 100% 0, 100% 45%, 0% 100%);
+  transform: translateY(-100%);
+}
+
+.card::after {
+  bottom: 0;
+  clip-path: polygon(0 55%, 100% 0, 100% 100%, 0% 100%);
+  transform: translateY(100%);
+}
+
+.card_body {
+  opacity: 0;
+  transition: opacity 0.25s;
+}
+
+.card_title {
+  color: #6a515e;
+  margin-bottom: 15px;
+}
+
+.card:hover::before,
+.card:hover::after {
+  transform: translateY(0);
+}
+
+.card:hover .card_body {
+  opacity: 1;
+  transition-delay: 0.75s;
 }
